// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`backslash_2028.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
1;/*a*///b /*c*/2

=====================================output=====================================
1; /*a*/ //b
/*c*/ 2;

================================================================================
`;

exports[`backslash_2029.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
1;/*a*///b /*c*/2

=====================================output=====================================
1; /*a*/ //b
/*c*/ 2;

================================================================================
`;
